@@ -6,5 +6,4 @@ copyright_year    = 2010
 
 [@Author::RWSTAUNER]
 [Prereqs / TestRecommends]
-Test::Synopsis   = 0.06
 Test::Warn       = 0.21
