@@ -2,6 +2,8 @@ Revision history for Sub::Chain::Group
 
 {{$NEXT}}
 
+  - Remove Test::Synopsis test dependency
+
 0.013     2012-10-13T22:06:52Z
 
   - Enable before/after hooks that operate on the input record as a whole
